# comic

./: .env.example  .gitignore  README.md  README_volc_imagex_ocr.md  pyproject.toml
.github/workflows/: build-windows-app.yml
app/shared/: README.md  config.py  validator.py
comic_splitter/: psd_preprocess.py  script_agent.py
comic_splitter/common/: types.py
comic_splitter/stage1/: band_post_filter.py  debug_vis.py  features.py  fusion.py  post_filter.py  splitter.py
comic_splitter/stage2/: __init__.py  debug_vis.py  embedding.py  env.py  export.py  grow.py  patch_graph.py  segmenter.py  text_export.py  types.py
comic_splitter/ui/: __init__.py  react_api.py
comic_splitter/workflow/: __init__.py  config.py  panel_script.py  runtime.py  storyboard.py
config/: panel_script.toml  storyboard.toml
docs/: ARCHITECTURE.md  multi_agent_workflow.md  react_workbench_ui_guide.md
frontend/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
scripts/: build_windows_app.py  debug_psd_preprocess.py  picslit_desktop.py  run_panel_script_agent.py  run_react_workbench.py  run_stage1.py  run_stage2.py  run_storyboard_job.py
tests/: test_export_panel_png.py  test_geometry_contract.py  test_ocr_image_preprocess.py  test_ocr_parse.py  test_panel_text_export.py  test_react_api.py  test_script_agent.py  test_text_merge_matching.py  test_text_panel_map_v2.py  test_textbox_layer_detection.py  test_workflow_config.py  test_workflow_retry_integration.py
volc_imagex/: __init__.py  _utils.py  client.py  ocr.py  pipeline.py  types.py  uploader.py
(+33 files in other folders)
