[project]
name = "picslit2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.7",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "psd-tools>=1.12.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.0",
    "scikit-image>=0.26.0",
    "uvicorn>=0.40.0",
    "volcengine-python-sdk[ark]>=5.0.9",
]
